--- a/IdeoGo.API/appsettings.json
+++ b/IdeoGo.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=ideo;uid=root;password=13791924"
+    "DefaultConnection": "server=localhost;port=3306;database=NivIdeo;uid=root;password=`7=[nA#kNLbFg]&U"
   },
   "AllowedHosts": "*"
 }
